--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,19 @@
             <version>4.13</version>
             <scope>test</scope>
         </dependency>
+
+        <!--For parser-->
+        <dependency>
+            <groupId>net.sourceforge.htmlunit</groupId>
+            <artifactId>htmlunit</artifactId>
+            <version>2.49.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.13.1</version>
+        </dependency>
     </dependencies>
 
     <build>
